Added unit-tests on some ctors.

--- a/tst/Makefile.am
+++ b/tst/Makefile.am
@@ -13,6 +13,7 @@ unit_test_SOURCES = unit-tests.cpp \
   node/node_properties_test.cpp \
   \
   tree/tree_change_data_test.cpp \
+  tree/tree_ctor_dtor_test.cpp \
   tree/tree_iterator_cast_test.cpp \
   tree/tree_ranged_loop_test.cpp \
   tree/tree_subtree_copy_test.cpp \
